--- a/lectures/docker_practice/docker-compose.yml
+++ b/lectures/docker_practice/docker-compose.yml
@@ -2,16 +2,18 @@ services:
   
   app:
     build: ./app
+    links:
+      - db
     ports:
-      - 8081:8081
+      - '5000:5000'
   
   db:
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
-    restart: always
+    # restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
     volumes:
-      - ./db:/var/lib/mysql
+      - ./db:/docker-entrypoint-initdb.d/:ro
     ports:
-      - 3306:3306
+      - '32000:3306'
