added db migrations with first model

--- a/homework/flask_API_hotel/.env
+++ b/homework/flask_API_hotel/.env
@@ -1,2 +1,6 @@
 FLASK_APP=pet_hotel
 FLASK_ENV=development
+# postgresql+psycopg2://dilnix:qwerty@localhost:5432/dilnix
+# sqlite:///db.db
+# sqlite://
+SQLALCHEMY_DATABASE_URI=sqlite:///db.db
